fixed images cutting off on refresh

--- a/src/components/styleSheets/ProductList.css
+++ b/src/components/styleSheets/ProductList.css
@@ -7,7 +7,7 @@
 }
 
 .product-list{
-    /* min-height: 80vh; */
+    min-height: 80vh;
     width: 100%;
     display:grid;
     grid-auto-rows: 5%;
